derive/tests/snapshots/foreign_key_with_table_level_index/ShelvedBook/get_all_shelved_books.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `shelved_book` table.
    pub fn get_all_shelved_books<'a>(&'a self) -> impl Iterator<Item = ShelvedBook> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().shelved_book().iter()
    }
}
