derive/tests/snapshots/foreign_key_with_table_level_index/ShelvedBook/get_shelved_book_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `ShelvedBook` from the `shelved_book` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_shelved_book_by_id<'a>(
        &'a self,
        id: impl Into<ShelvedBookId> + Clone,
    ) -> Result<ShelvedBook, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().shelved_book().id().find(id.clone().into().value()) {
            Some(shelved_book) => Ok(shelved_book),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "shelved_book".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `ShelvedBook` from the `shelved_book` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_shelved_book_by_id<'a>(
        &'a self,
        id: impl Into<ShelvedBookId> + Clone,
    ) -> Result<ShelvedBook, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().shelved_book().id().find(id.clone().into().value()) {
            Some(shelved_book) => Ok(shelved_book),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "shelved_book".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
